--- a/esphome/talkie.yaml
+++ b/esphome/talkie.yaml
@@ -104,23 +104,19 @@ binary_sensor:
     name: Push to talk Button
     disabled_by_default: true
     entity_category: diagnostic
-    on_multi_click:
-      - timing:
-          - ON FOR AT LEAST 350ms
+    on_press:
         then:
           - voice_assistant.start:
-      - timing:
-          - ON FOR AT LEAST 350ms
-          - OFF FOR AT LEAST 10ms
-        then:
-          - light.turn_on:
-              id: led
-              blue: 100%
-              red: 0%
-              green: 0%
-              brightness: 25%
-              effect: pulse
-          - voice_assistant.stop:
+    #on_release:
+        #then:
+          #- light.turn_on:
+              #id: led
+              #blue: 100%
+              #red: 0%
+              #green: 0%
+              #brightness: 25%
+              #effect: pulse
+          #- voice_assistant.stop:
 
   - platform: gpio
     name: Change Assistant Button
@@ -149,7 +145,7 @@ binary_sensor:
 voice_assistant:
   microphone: external_microphone
   speaker: external_speaker
-  on_start:
+  on_listening:
     - light.turn_on:
         id: led
         blue: 100%
@@ -157,6 +153,14 @@ voice_assistant:
         green: 0%
         brightness: 25%
         effect: none
+  on_start: 
+    - light.turn_on:
+        id: led
+        blue: 100%
+        red: 0%
+        green: 0%
+        brightness: 25%
+        effect: pulse 
   on_tts_start:
     - light.turn_on:
         id: led
