--- a/automations.yaml
+++ b/automations.yaml
@@ -213,19 +213,17 @@
   alias: Boutons Hue - Bouton Entrée
   description: ''
   trigger:
-  - device_id: 64185ca2086c2ebd7b976a43ef0c89fd
-    domain: hue
-    platform: device
-    type: repeat
-    subtype: 1
-    unique_id: c1c9f277-e27a-4340-9962-2206cc0d7e3a
+  - platform: state
+    entity_id:
+    - event.entree_switch_button_1
+    attribute: event_type
+    to: repeat
     id: 'on'
-  - device_id: 64185ca2086c2ebd7b976a43ef0c89fd
-    domain: hue
-    platform: device
-    type: repeat
-    subtype: 4
-    unique_id: 7564eab9-3cc9-4321-890c-1b9f1465f108
+  - platform: state
+    entity_id:
+    - event.entree_switch_button_4
+    attribute: event_type
+    to: repeat
     id: 'off'
   condition: []
   action:
@@ -248,19 +246,17 @@
   alias: Boutons Hue - Bouton Salon Couloir
   description: ''
   trigger:
-  - device_id: efa42240bac38d83b77963e7fd5bb5ac
-    domain: hue
-    platform: device
-    type: repeat
-    subtype: 1
-    unique_id: 9df3f0e5-001b-4c7b-9c5d-a96a8b391edd
+  - platform: state
+    entity_id:
+    - event.salon_couloir_switch_button_1
+    attribute: event_type
+    to: repeat
     id: 'on'
-  - device_id: efa42240bac38d83b77963e7fd5bb5ac
-    domain: hue
-    platform: device
-    type: repeat
-    subtype: 4
-    unique_id: 73e97207-29d2-4078-8304-9e918425fe48
+  - platform: state
+    entity_id:
+    - event.salon_couloir_switch_button_4
+    attribute: event_type
+    to: repeat
     id: 'off'
   condition: []
   action:
@@ -477,6 +473,9 @@
       icon: mdi:car
       color: deep-orange
       tag: tesla_end_charge_after_off_peak_hours
+      until:
+      - entity_id: sensor.tesla_charge_limit
+        new_state: '{{new_target_percentage}}'
   mode: single
 - id: '1688139412657'
   alias: Réveil intelligent - Régler heures de déclenchement
@@ -1262,68 +1261,6 @@
     data: {}
     target:
       entity_id: switch.alexa
-  mode: single
-- id: '1688374158230'
-  alias: "Surveillance de la maison - \U0001F514 Rappeler portes/fenêtres ouvertes
-    quand maison occupée"
-  description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - binary_sensor.home_occupied
-    from: 'off'
-    to: 'on'
-  condition:
-  - condition: state
-    entity_id: input_boolean.automation_monitor_home
-    state: 'on'
-  action:
-  - if:
-    - condition: state
-      entity_id: binary_sensor.all_doors
-      state: 'on'
-    then:
-    - variables:
-        open_doors: "{{ \n  expand(states.binary_sensor.all_doors.attributes.entity_id)\n
-          \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
-          \n    | list\n    | join(\", \")\n}}"
-    - event: NOTIFIER
-      event_data:
-        action: send_to_present
-        title: "️\U0001F6AA Porte(s) ouverte(s) !"
-        message: 'Rappel: Les portes suivantes sont toujours ouvertes:  {{open_doors}}'
-        click_url: /lovelace/openings
-        icon: mdi:door-open
-        color: deep-orange
-        tag: home_occupied_door_open
-        until:
-        - entity_id: binary_sensor.all_doors
-          new_state: 'off'
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'off'
-  - if:
-    - condition: state
-      entity_id: binary_sensor.all_windows
-      state: 'on'
-    then:
-    - variables:
-        open_windows: "{{ \n  expand(states.binary_sensor.all_windows.attributes.entity_id)\n
-          \   | selectattr('state', 'eq', 'on')\n    | map(attribute='attributes.friendly_name')
-          \n    | list\n    | join(\", \")\n}}"
-    - event: NOTIFIER
-      event_data:
-        action: send_to_present
-        title: "️\U0001F6AA Fenêtre(s) ouverte(s) !"
-        message: 'Rappel: Les fenêtres suivantes sont toujours ouvertes: {{open_windows}}'
-        click_url: /lovelace/openings
-        icon: mdi:window-open
-        color: deep-orange
-        tag: home_occupied_window_open
-        until:
-        - entity_id: binary_sensor.all_windows
-          new_state: 'off'
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'off'
   mode: single
 - id: '1688374658190'
   alias: "Surveillance de la maison - \U0001F514 Notifier machine à café allumée depuis
@@ -2222,7 +2159,7 @@
         - light.2d_matrix
   mode: single
 - id: '1690221385338'
-  alias: "Bureau - \U0001F4E3 Position Debout "
+  alias: "Assist - \U0001F4E3 Bureau Position Debout "
   description: ''
   trigger:
   - platform: conversation
@@ -2241,7 +2178,7 @@
     enabled: true
   mode: single
 - id: '1690221432357'
-  alias: "Bureau - \U0001F4E3 Position Assise"
+  alias: "Assist - \U0001F4E3 Bureau Position Assise"
   description: ''
   trigger:
   - platform: conversation
@@ -2294,7 +2231,7 @@
       entity_id: input_number.daily_rain
   mode: single
 - id: '1690532506099'
-  alias: "Rappel - \U0001F4E3 Créer un rappel"
+  alias: "Z - Rappel - \U0001F4E3 Créer un rappel"
   description: ''
   trigger:
   - platform: conversation
@@ -2360,7 +2297,7 @@
           entity_id: calendar.reminders
   mode: single
 - id: '1690555063262'
-  alias: 'Rappel - Notifier rappels lointains '
+  alias: Z - Test Rappel - Notifier rappel lointain
   description: ''
   trigger:
   - platform: calendar
@@ -2378,3 +2315,161 @@
       media_player: media_player.talkie_media_player
       reminder: '{{trigger.calendar_event.summary}}'
   mode: single
+- id: '1690627239766'
+  alias: "Z - Commandes Vocales - \U0001F4E3 Créer une commande vocale"
+  description: ''
+  trigger:
+  - platform: conversation
+    command:
+    - '{command} dans [{days} jour[s]] [et] [{hours} h[eure][s]] [et] [{minutes} min[unte][s]]
+      [et] [{seconds} seconde[s]]'
+    - 'Dans [{days} jour[s]] [et] [{hours} h[eure][s]] [et] [{minutes} min[unte][s]]
+      [et] [{seconds} seconde[s]] {command} '
+    - '{command} in [{days} day[s]] [and] [{hours} h[our][s]] [and] [{minutes} min[unte][s]]
+      [and] [{seconds} second[s]]'
+    - In [{days} day[s]] [and] [{hours} h[our][s]] [and] [{minutes} min[unte][s]]
+      [and] [{seconds} second[s]] {command}
+  condition: []
+  action:
+  - variables:
+      days: '{{trigger.slots.days|default(0)|int(0)}}
+
+        '
+      hours: '{{trigger.slots.hours|default(0)|int(0)}}
+
+        '
+      minutes: '{{trigger.slots.minutes|default(0)|int(0)}}
+
+        '
+      seconds: '{{trigger.slots.seconds|default(0)|int(0)}}
+
+        '
+      time_from_now: '{{timedelta(days=days, hours=hours, minutes=minutes,
+
+        seconds=seconds)}}
+
+        '
+      short_timeframe: '{{as_timedelta(time_from_now) < timedelta(minutes = 20)}}
+
+        '
+      command_time: '{{now() + as_timedelta(time_from_now)}}
+
+        '
+      command_time_end: "{{now() + as_timedelta(time_from_now) + timedelta(seconds
+        = 1)}} \n"
+  - choose:
+    - conditions:
+      - condition: template
+        value_template: '{{short_timeframe == true}}'
+      sequence:
+      - service: script.turn_on
+        target:
+          entity_id: script.assist_for_later
+        data:
+          variables:
+            command: '{{trigger.slots.command}}'
+            days: '{{days}}'
+            hours: '{{hours}}'
+            minutes: '{{minutes}}'
+            seconds: '{{seconds}}'
+            media_player: media_player.talkie_media_player
+    - conditions:
+      - condition: template
+        value_template: '{{short_timeframe == false}}'
+      sequence:
+      - service: calendar.create_event
+        data:
+          summary: '{{trigger.slots.command}}'
+          start_date_time: '{{command_time}}'
+          end_date_time: '{{command_time_end}}'
+        target:
+          entity_id: calendar.assist_commands
+  mode: single
+- id: '1690627573895'
+  alias: Z - Commandes Vocales - Effectuer commande vocale lointaine
+  description: ''
+  trigger:
+  - platform: calendar
+    event: start
+    offset: 0:0:0
+    entity_id: calendar.assist_commands
+  condition: []
+  action:
+  - service: script.assist_for_later
+    data:
+      days: 0
+      hours: 0
+      minutes: 0
+      seconds: 0
+      media_player: media_player.talkie_media_player
+      command: '{{trigger.calendar_event.summary}}'
+  mode: single
+- id: '1690826979664'
+  alias: "Assist - \U0001F4E3 Commandes Multiple "
+  description: ''
+  trigger:
+  - platform: conversation
+    command:
+    - '{command1} et {command2}'
+    id: fr
+  - platform: conversation
+    command:
+    - '{command1} and {command2}'
+    id: en
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - fr
+      sequence:
+      - service: conversation.process
+        data:
+          agent_id: homeassistant
+          language: fr
+          text: '{{trigger.slots.command1}}'
+      - service: conversation.process
+        data:
+          agent_id: homeassistant
+          language: fr
+          text: '{{trigger.slots.command2}}'
+    - conditions:
+      - condition: trigger
+        id:
+        - en
+      sequence:
+      - service: conversation.process
+        data:
+          agent_id: homeassistant
+          language: en
+          text: '{{trigger.slots.command1}}'
+      - service: conversation.process
+        data:
+          agent_id: homeassistant
+          language: en
+          text: '{{trigger.slots.command2}}'
+  mode: parallel
+  max: 100
+- id: '1690881019090'
+  alias: Test blueprint 2
+  description: ''
+  use_blueprint:
+    path: perso/cast_dall_e.yaml
+    input:
+      open_ai_config_entry: c43c9f68251a39c4b8e1e9d083087bee
+      media_player: media_player.tv_cast
+      additiona_conditions:
+      - condition: state
+        entity_id: light.salon
+        state: 'on'
+      assist_command: Affiche une photo de {prompt}
+- id: '1690881654351'
+  alias: "Assist - \U0001F4E3 Cast Dall-E Image"
+  description: ''
+  use_blueprint:
+    path: perso/cast_dall_e.yaml
+    input:
+      assist_command: Affiche sur la télé une image (de |d'){prompt}
+      open_ai_config_entry: fcd62e0ff1d58319b899d424dd59a3ec
+      media_player: media_player.tv_cast
